--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <!-- <script src="./js-1/task-3.js" type="module"></script> -->
     <!-- <script src="./js-1/task-4.js" type="module"></script> -->
     <!-- <script src="./js-1/task-5.js" type="module"></script> -->
-    <script src="./js-2/task-1.js" type="module"></script>
+    <!-- <script src="./js-2/task-1.js" type="module"></script> -->
+    <!-- <script src="./js-2/task-2.js" type="module"></script> -->
+    <!-- <script src="./js-2/task-3.js" type="module"></script> -->
+    <!-- <script src="./js-2/task-4.js" type="module"></script> -->
+    <!-- <script src="./js-2/task-5.js" type="module"></script> -->
+    <!-- <script src="./js-2/task-6.js" type="module"></script> -->
+    <!-- <script src="./js-2/task-7.js" type="module"></script> -->
+    <!-- <script src="./js-2/task-8.js" type="module"></script> -->
+    <script src="./js-2/task-9.js" type="module"></script>
   </body>
 </html>
